test/libyul/yulSyntaxTests/number_literal_5.yul
{ let x:u256 := 0x1ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff:u256 }
// ----
// TypeError 6708: (16-88): Number literal too large (> 256 bits)
